--- a/package.json
+++ b/package.json
@@ -3,20 +3,33 @@
   "version": "0.0.3",
   "license": "MIT",
   "author": "Aleksey Razbakov",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "src"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "prepublish": "tsc"
   },
   "dependencies": {
     "firebase": "^7.23.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-vue": "^7.0.1",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3",
     "vite": "^1.0.0-rc.4"
   }
 }
