--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "vca-firebase",
-  "version": "0.0.3",
+  "name": "@sbusso/vca-firebase",
+  "version": "0.0.7",
   "license": "MIT",
   "author": "Aleksey Razbakov",
+  "contributors": [{
+    "name": "Stephane Busso",
+    "email": "stephane.busso@gmail.com"
+  }],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "prepublish": "tsc"
+    "prepare": "tsc"
   },
   "dependencies": {
     "firebase": "^7.23.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.14",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -26,7 +36,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.1",
+    "jest": "^26.5.3",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3",
     "vite": "^1.0.0-rc.4"
   }
